# cricNotifier

./: .gitignore  .travis.yml  .whitesource  LICENSE  MANIFEST.in  README.md  app.py  config.yml  get_score.py  notification.py  pyproject.toml  requirements.txt  setup.py  ui.py
.github/workflows/: codacy-analysis.yml  python-app.yml  python-package.yml
app/: app.py  get_score.py  main.py  notification.py  utility.py
app/utils/: get_score.py  interface.py  logs.py  notification.py  scoreboard.py  tools.py  ui.py
conf/: logs.yml
cricNotifier/: main.py  sb.py
cricNotifier/conf/: config.yml
cricNotifier/utils/: cli.py  constants.py  interface.py  logs.py  notification.py  scoreboard.py  tools.py
requirements/: requirements_other.txt  requirements_win.txt
test/: test_get_score.py  test_scoreboard.py
tests/: test_cricnotifier.py  test_scoreboard.py
